--- a/microservices/accounts/src/main/resources/project-defaults.yml
+++ b/microservices/accounts/src/main/resources/project-defaults.yml
@@ -28,3 +28,15 @@ swarm:
               module: org.wildfly.extension.undertow
               flag: required
               login-module-stack-ref: roles-lm-stack
+  datasources:
+    data-sources:
+      jdbc/h2ds:
+        driver-name: driverh2
+        connection-url: jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+        user-name: sa
+        password: sa
+    jdbc-drivers:
+      driverh2:
+        driver-class-name: org.h2.Driver
+        xa-datasource-name: org.h2.jdbcx.JdbcDataSource
+        driver-module-name: com.h2database.h2
