--- a/microservices/accounts/pom.xml
+++ b/microservices/accounts/pom.xml
@@ -13,9 +13,6 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<version.h2>1.4.187</version.h2>
-		<thorntail.flyway.jdbc-password>sa</thorntail.flyway.jdbc-password>
-		<thorntail.flyway.jdbc-url>jdbc:h2:~/data/db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE</thorntail.flyway.jdbc-url>
-		<thorntail.flyway.jdbc-user>sa</thorntail.flyway.jdbc-user>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -71,6 +68,13 @@
 								</goals>
 							</execution>
 						</executions>
+						<configuration>
+							<properties>
+								<thorntail.flyway.jdbc-password>sa</thorntail.flyway.jdbc-password>
+								<thorntail.flyway.jdbc-url>jdbc:h2:~/data/db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE</thorntail.flyway.jdbc-url>
+								<thorntail.flyway.jdbc-user>sa</thorntail.flyway.jdbc-user>
+							</properties>
+						</configuration>
 					</plugin>
 				</plugins>
 			</build>
@@ -101,6 +105,7 @@
 				<dependency>
 					<groupId>io.thorntail</groupId>
 					<artifactId>flyway</artifactId>
+
 				</dependency>
 			</dependencies>
 		</profile>
