--- a/microservices/accounts/pom.xml
+++ b/microservices/accounts/pom.xml
@@ -70,16 +70,17 @@
 						</executions>
 						<configuration>
 							<properties>
-								<thorntail.flyway.jdbc-password>sa</thorntail.flyway.jdbc-password>
-								<thorntail.flyway.jdbc-url>jdbc:h2:~/data/db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE</thorntail.flyway.jdbc-url>
-								<thorntail.flyway.jdbc-user>sa</thorntail.flyway.jdbc-user>
+<!-- 								<thorntail.flyway.jdbc-password>sa</thorntail.flyway.jdbc-password> -->
+<!-- 								<thorntail.flyway.jdbc-url>jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE</thorntail.flyway.jdbc-url> -->
+<!-- 								<thorntail.flyway.jdbc-user>sa</thorntail.flyway.jdbc-user> -->
+									<thorntail.flyway.jndi-datasource>java:/jdbc/H2DS</thorntail.flyway.jndi-datasource>
 							</properties>
 						</configuration>
 					</plugin>
 				</plugins>
 			</build>
 			<properties>
-				<version.thorntail>2.3.0.Final</version.thorntail>
+				<version.thorntail>2.1.0.Final</version.thorntail>
 			</properties>
 			<dependencyManagement>
 				<dependencies>
@@ -100,12 +101,15 @@
 				</dependency>
 				<dependency>
 					<groupId>io.thorntail</groupId>
+					<artifactId>flyway</artifactId>
+				</dependency>
+				<dependency>
+					<groupId>io.thorntail</groupId>
 					<artifactId>datasources</artifactId>
 				</dependency>
 				<dependency>
 					<groupId>io.thorntail</groupId>
-					<artifactId>flyway</artifactId>
-
+					<artifactId>jpa</artifactId>
 				</dependency>
 			</dependencies>
 		</profile>
