--- a/microservices/accounts/pom.xml
+++ b/microservices/accounts/pom.xml
@@ -67,7 +67,10 @@
 										<dockerFileDir>${project.basedir}</dockerFileDir>
 									</build>
 									<run>
-										<ports>8081:8080</ports>
+										<ports>
+											<port>8081:8080</port>
+
+										</ports>
 										<cmd>java -jar ${project.name}-thorntail.jar</cmd>
 									</run>
 								</image>
